[tool.poetry]
name = "consuming-coinmarketcap-api"
version = "0.1.0"
description = ""
authors = ["bruno <bruno.mcreal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

